# operra-test-website

./: .env.example  .gitignore  docker-compose.yml  index.html  middleware.ts  modal-preview.html  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  railway.toml  screenshot.js  turbo.json  vercel.json
app/: auth.module.css  globals.css  layout.tsx  page.tsx
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260415_0000_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: clerk.py  config.py  db.py
apps/api/app/integrations/: __init__.py  apollo.py  attio.py  base.py  bukku.py  calcom.py  meta.py  metricool.py
apps/api/app/jobs/: queue.py  worker.py
apps/api/app/jobs/tasks/: __init__.py  attio_sync.py  lead_enrichment.py
apps/api/app/models/: __init__.py  automation.py  base.py  booking.py  client.py  invoice.py  lead.py  organization.py  social_post.py  sync_log.py  user.py  webhook_event.py
apps/api/app/routers/: analytics.py  automations.py  bookings.py  clients.py  invoices.py  leads.py  social.py
apps/api/app/routers/webhooks/: attio.py  calcom.py  clerk.py  meta.py
apps/api/app/schemas/: analytics.py  automation.py  booking.py  client.py  common.py  invoice.py  lead.py  social.py
apps/api/app/webhooks/: __init__.py  processor.py  signatures.py
apps/api/scripts/: import_attio.py  seed.py
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_leads.py  test_signatures.py  test_webhook_idempotency.py
components/: Footer.module.css  (+2 more)
(+53 files in other folders)
