[project]
name = "operra-api"
version = "0.1.0"
description = "Operra FastAPI backend — multi-tenant business operating system."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
  "fastapi>=0.115.4",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "sqlalchemy>=2.0.36",
  "asyncpg>=0.29.0",
  "alembic>=1.13.3",
  "httpx>=0.27.2",
  "tenacity>=9.0.0",
  "pyjwt[crypto]>=2.9.0",
  "svix>=1.38.0",
  "arq>=0.26.3",
  "redis>=5.1.1",
  "python-multipart>=0.0.17",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "aiosqlite>=0.20.0",
  "ruff>=0.7.1",
  "mypy>=1.13.0",
  "anyio>=4.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["B008"]  # FastAPI Depends() default

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
